// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders without numberOfComments 1`] = `
<div>
  <CommentsHeader
    numberOfComments={86923}
  />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Comments renders without props 1`] = `
<div>
  <CommentsHeader />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
